--- a/dockerfile.odoo
+++ b/dockerfile.odoo
@@ -11,9 +11,11 @@ USER root
 
 # Set environment language and locals
 RUN apt-get update && \
-    apt-get install -y locales libmagic1 libmagic-dev && \
+    apt-get install -y locales libmagic1 libmagic-dev ffmpeg && \
     sed -i '/en_US.UTF-8/s/^# //g' /etc/locale.gen && \
-    locale-gen
+    locale-gen && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
 ENV LANG=en_US.UTF-8
 ENV LANGUAGE=en_US:en
