--- a/dockerfile.odoo
+++ b/dockerfile.odoo
@@ -9,7 +9,7 @@ WORKDIR /opt/odoo
 # Set permissions
 USER root
 
-# Set environment language and locals
+# Set environment dependencies
 RUN apt-get update && \
     apt-get install -y locales libmagic1 libmagic-dev ffmpeg && \
     sed -i '/en_US.UTF-8/s/^# //g' /etc/locale.gen && \
