Adds permissions script execution
Executes the permissions script to set the correct file
permissions within the Docker container. This ensures
proper access and functionality for the application.

--- a/dockerfile.odoo
+++ b/dockerfile.odoo
@@ -27,8 +27,12 @@ COPY requirements.txt .
 # Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Permissions
+RUN permissions.sh
+
 # Back to standard user
 USER odoo
+
 
 # Define entrypoint
 ENTRYPOINT ["/entrypoint.sh"]
