fix: improve permissions script compatibility for Docker containers
- Added automatic sudo detection to work in containerized environments where sudo is unavailable
- Normalized line endings in Dockerfile to handle Windows-edited files
- Removed emoji characters that may not render correctly in all terminal environments

--- a/dockerfile.odoo
+++ b/dockerfile.odoo
@@ -23,12 +23,14 @@ ENV LC_ALL=en_US.UTF-8
 
 # Update requirements file container
 COPY requirements.txt .
+COPY permissions.sh .
 
 # Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Permissions
-RUN sh ./permissions.sh
+# Normalize line endings (in case the file was edited on Windows)
+RUN sed -i 's/\r$//' permissions.sh && bash ./permissions.sh
 
 # Back to standard user
 USER odoo
