[UPDATE] deployment: Prepared files to Dokploy deployment.

--- a/compose.yaml
+++ b/compose.yaml
@@ -5,9 +5,8 @@
 services:
   database:
     image: postgres:15
-    container_name: postgres_db
-    ports:
-      - "5432:5432"
+    expose:
+      - "5432"
     environment:
       POSTGRES_DB: odoo_db
       POSTGRES_USER: odoo_user
@@ -19,19 +18,20 @@ services:
       interval: 5s
       start_period: 20s
       timeout: 60s
+    networks:
+      - dokploy-network
     restart: always
 
   odoo:
     build:
       context: .
       dockerfile: ./dockerfile.odoo
-    container_name: odoo_app
     depends_on:
       database:
         condition: service_healthy
-    ports:
-      - "8069:8069"
-      - "8071:8071"  # Livechat
+    expose:
+      - "8069"
+      - "8071"  # Livechat
     environment:
       ODOO_RC: /etc/odoo/odoo.conf
     volumes:
@@ -40,14 +40,15 @@ services:
       - "./data/odoo_files:/var/lib/odoo"
       - "./addons:/mnt/extra-addons"
       - "./music:/music"
+    networks:
+      - dokploy-network
     restart: always
 
   navidrome:
     image: deluan/navidrome:latest
     # user: 1000:1000
-    container_name: navidrome
-    ports:
-      - "4533:4533"
+    expose:
+      - "4533"
     environment:
       # Navidrome developing
       ND_DATAFOLDER: /data
@@ -60,4 +61,10 @@ services:
     volumes:
       - "./data/navidrome:/data"
       - "./music:/music:ro"
+    networks:
+      - dokploy-network
     restart: unless-stopped
+
+networks:
+  dokploy-network:
+    external: true
