--- a/dockerfile.odoo
+++ b/dockerfile.odoo
@@ -6,13 +6,11 @@ FROM odoo:17.0
 # Work directory
 WORKDIR /opt/odoo
 
+# Set permissions
+USER root
+
 # Set environment dependencies
-RUN apt-get update && \
-    apt-get install -y locales libmagic1 libmagic-dev ffmpeg && \
-    sed -i '/en_US.UTF-8/s/^# //g' /etc/locale.gen && \
-    locale-gen && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y locales libmagic1 libmagic-dev ffmpeg && sed -i '/en_US.UTF-8/s/^# //g' /etc/locale.gen && locale-gen && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 ENV LANG=en_US.UTF-8
 ENV LANGUAGE=en_US:en
