[UPDATE] dockerfile: Added write permissions v.2.

--- a/dockerfile.odoo
+++ b/dockerfile.odoo
@@ -20,10 +20,8 @@ ENV LC_ALL=en_US.UTF-8
 COPY requirements.txt .
 COPY permissions.sh .
 
-CHMOD +x entrypoint.sh
-
 # Normalize line endings (in case the file was edited on Windows) & run permissions file
-RUN sed -i 's/\r$//' permissions.sh && bash ./permissions.sh
+RUN sed -i 's/\r$//' permissions.sh && chmod +x entrypoint.sh && bash ./permissions.sh
 
 # Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
