--- a/dockerfile.odoo
+++ b/dockerfile.odoo
@@ -21,7 +21,7 @@ COPY requirements.txt .
 COPY permissions.sh .
 
 # Normalize line endings (in case the file was edited on Windows) & run permissions file
-RUN sed -i 's/\r$//' permissions.sh && chmod +x entrypoint.sh && bash ./permissions.sh
+RUN sed -i 's/\r$//' permissions.sh && chmod +x permissions.sh && bash ./permissions.sh
 
 # Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
