--- a/dockerfile.odoo
+++ b/dockerfile.odoo
@@ -3,14 +3,11 @@
 
 FROM odoo:17.0
 
-
 # Work directory
 WORKDIR /opt/odoo
 
-
-# Set permissions
+# Set root user
 USER root
-
 
 # Set environment dependencies
 RUN apt-get update && apt-get install -y locales libmagic1 libmagic-dev ffmpeg && sed -i '/en_US.UTF-8/s/^# //g' /etc/locale.gen && locale-gen && apt-get clean && rm -rf /var/lib/apt/lists/*
@@ -19,26 +16,20 @@ ENV LANG=en_US.UTF-8
 ENV LANGUAGE=en_US:en
 ENV LC_ALL=en_US.UTF-8
 
-
 # Update requirements & permissions files
 COPY requirements.txt .
 COPY permissions.sh .
 
-
 # Normalize line endings (in case the file was edited on Windows) & run permissions file
-RUN sed -i 's/\r$//' permissions.sh && chmod +x permissions.sh && bash ./permissions.sh
-
+RUN sed -i 's/\r$//' permissions.sh && bash ./permissions.sh
 
 # Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-
 # Define entrypoint
 ENTRYPOINT ["/entrypoint.sh"]
 
-
 # Back to standard user
-USER odoo
 
 
 # Default command (empty — handled by entrypoint)
