--- a/compose.yaml
+++ b/compose.yaml
@@ -8,13 +8,13 @@ services:
     expose:
       - "5432"
     environment:
-      POSTGRES_DB: odoo_db
-      POSTGRES_USER: odoo_user
-      POSTGRES_PASSWORD: odoo_password
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
       - "./data/postgres_db:/var/lib/postgresql/data"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U odoo_user -d odoo_db"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 5s
       start_period: 20s
       timeout: 60s
@@ -29,11 +29,16 @@ services:
     depends_on:
       database:
         condition: service_healthy
-    expose:
-      - "8069"
-      - "8071"  # Livechat
+    ports:
+      - "8069:8069"
+      - "8071:8071"  # Livechat
     environment:
       ODOO_RC: /etc/odoo/odoo.conf
+      DB_HOST: database
+      DB_PORT: 5432
+      DB_USER: ${POSTGRES_USER}
+      DB_PASSWORD: ${POSTGRES_PASSWORD}
+      DB_NAME: ${POSTGRES_DB}
     volumes:
       - "./entrypoint.sh:/entrypoint.sh"
       - "./data/config:/etc/odoo"
@@ -47,8 +52,8 @@ services:
   navidrome:
     image: deluan/navidrome:latest
     # user: 1000:1000
-    expose:
-      - "4533"
+    ports:
+      - "4533:4533"
     environment:
       # Navidrome developing
       ND_DATAFOLDER: /data
