--- a/dockerfile.odoo
+++ b/dockerfile.odoo
@@ -10,7 +10,7 @@ WORKDIR /opt/odoo
 USER root
 
 # Set environment dependencies
-RUN apt-get update && apt-get install -y locales libmagic1 libmagic-dev ffmpeg && sed -i '/en_US.UTF-8/s/^# //g' /etc/locale.gen && locale-gen && apt-get clean && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y --no-install-recommends locales libmagic1 libmagic-dev ffmpeg && echo "en_US.UTF-8 UTF-8" > /etc/locale.gen && locale-gen en_US.UTF-8 && update-locale LANG=en_US.UTF-8 LC_ALL=en_US.UTF-8 LANGUAGE=en_US:en && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 ENV LANG=en_US.UTF-8
 ENV LANGUAGE=en_US:en
