[WIP] Modify locale settings in Dockerfile
Comment out locale installation and update environment variables.

--- a/dockerfile.odoo
+++ b/dockerfile.odoo
@@ -10,14 +10,14 @@ WORKDIR /opt/odoo
 USER root
 
 # Set locales
-RUN apt-get update && apt-get install -y --no-install-recommends locales && sed -i '/en_US.UTF-8/s/^# //g' /etc/locale.gen && locale-gen && apt-get clean && rm -rf /var/lib/apt/lists/*
+# RUN apt-get update && apt-get install -y --no-install-recommends locales && sed -i '/en_US.UTF-8/s/^# //g' /etc/locale.gen && locale-gen && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Set environment dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends libmagic1 libmagic-dev ffmpeg && apt-get clean && rm -rf /var/lib/apt/lists/*
 
-ENV LANG=en_US.UTF-8
-ENV LANGUAGE=en_US:en
-ENV LC_ALL=en_US.UTF-8
+ENV LANG=C.UTF-8
+# ENV LANGUAGE=en_US:en
+ENV LC_ALL=C.UTF-8
 
 # Update requirements & permissions files
 COPY requirements.txt .
