[WIP] Uncomment USER odoo in Dockerfile

--- a/dockerfile.odoo
+++ b/dockerfile.odoo
@@ -33,7 +33,7 @@ ENTRYPOINT ["/entrypoint.sh"]
 CMD []
 
 # Back to standard user
-# USER odoo
+USER odoo
 
 # Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
