--- a/dockerfile.odoo
+++ b/dockerfile.odoo
@@ -9,14 +9,10 @@ WORKDIR /opt/odoo
 # Set root user
 USER root
 
-# Set locales
-# RUN apt-get update && apt-get install -y --no-install-recommends locales && sed -i '/en_US.UTF-8/s/^# //g' /etc/locale.gen && locale-gen && apt-get clean && rm -rf /var/lib/apt/lists/*
-
 # Set environment dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends libmagic1 libmagic-dev ffmpeg && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 ENV LANG=C.UTF-8
-# ENV LANGUAGE=en_US:en
 ENV LC_ALL=C.UTF-8
 
 # Update requirements & permissions files
@@ -26,14 +22,17 @@ COPY permissions.sh .
 # Normalize line endings (in case the file was edited on Windows) & run permissions file
 RUN sed -i 's/\r$//' permissions.sh && bash ./permissions.sh
 
+# Install dependencies
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Fix permissions for Odoo runtime paths
+RUN mkdir -p /var/lib/odoo/.local /mnt/extra-addons && chown -R odoo:odoo /var/lib/odoo /mnt/extra-addons /opt/odoo
+
 # Define entrypoint
 ENTRYPOINT ["/entrypoint.sh"]
-
-# Default command (empty — handled by entrypoint)
-CMD []
 
 # Back to standard user
 USER odoo
 
-# Install dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+# Default command (empty — handled by entrypoint)
+CMD []
