--- a/dockerfile.odoo
+++ b/dockerfile.odoo
@@ -26,7 +26,7 @@ RUN sed -i 's/\r$//' permissions.sh && bash ./permissions.sh
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Fix permissions for Odoo runtime paths
-RUN mkdir -p /var/lib/odoo/.local /mnt/extra-addons && chown -R odoo:odoo /var/lib/odoo /mnt/extra-addons /opt/odoo
+RUN mkdir -p /var/lib/odoo/.local /mnt/extra-addons /home/odoo && chown -R odoo:odoo /var/lib/odoo /mnt/extra-addons /opt/odoo /home/odoo && chmod -R 755 /var/lib/odoo
 
 # Define entrypoint
 ENTRYPOINT ["/entrypoint.sh"]
