--- a/compose.yaml
+++ b/compose.yaml
@@ -40,7 +40,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     volumes:
-      - "./entrypoint.sh:/entrypoint.sh:ro"
+      - "./entrypoint.sh:/entrypoint.sh"
       - "./data/config:/etc/odoo"
       - "./data/odoo_files:/var/lib/odoo"
       - "./addons:/mnt/extra-addons"
