--- a/dockerfile.odoo
+++ b/dockerfile.odoo
@@ -26,10 +26,10 @@ RUN sed -i 's/\r$//' permissions.sh && bash ./permissions.sh
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Fix permissions for Odoo runtime paths
-RUN mkdir -p /var/lib/odoo/.local /mnt/extra-addons /home/odoo && chown -R odoo:odoo /var/lib/odoo /mnt/extra-addons /opt/odoo /home/odoo && chmod -R 755 /var/lib/odoo
+# RUN mkdir -p /var/lib/odoo/.local /mnt/extra-addons /home/odoo && chown -R odoo:odoo /var/lib/odoo /mnt/extra-addons /opt/odoo /home/odoo && chmod -R 755 /var/lib/odoo
 
 # Define entrypoint
-ENTRYPOINT ["bash", "/entrypoint.sh"]
+ENTRYPOINT ["/entrypoint.sh"]
 
 # Default command (empty — handled by entrypoint)
 CMD []
