--- a/compose.yaml
+++ b/compose.yaml
@@ -29,9 +29,9 @@ services:
     depends_on:
       database:
         condition: service_healthy
-    ports:
-      - "8069:8069"
-      - "8071:8071"  # Livechat
+    expose:
+      - "8069"
+      - "8071"  # Livechat
     environment:
       ODOO_RC: /etc/odoo/odoo.conf
       DB_HOST: database
@@ -52,8 +52,8 @@ services:
   navidrome:
     image: deluan/navidrome:latest
     # user: 1000:1000
-    ports:
-      - "4533:4533"
+    expose:
+      - "4533"
     environment:
       # Navidrome developing
       ND_DATAFOLDER: /data
