[WIP] prod compose: Changed environment variables.

--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -10,13 +10,11 @@ services:
     expose:
       - "8069"
     environment:
-      HOST: ${POSTGRES_HOST}
-      PORT: ${POSTGRES_PORT}
-      DB_NAME: ${POSTGRES_DB}
-      USER: ${POSTGRES_USER}
-      PASSWORD: ${POSTGRES_PASSWORD}
-    volumes:
-      - "./music:/opt/shared/music"
+      PGHOST: ${POSTGRES_HOST}
+      PGPORT: ${POSTGRES_PORT}
+      PGDATABASE: ${POSTGRES_DB}
+      PGUSER: ${POSTGRES_USER}
+      PGPASSWORD: ${POSTGRES_PASSWORD}
     networks:
       - dokploy-network
     restart: always
