--- a/docker/dockerfile.prod.odoo
+++ b/docker/dockerfile.prod.odoo
@@ -4,7 +4,7 @@
 FROM odoo:17.0
 
 # Add own module
-COPY ./addons /mnt/extra-addons
+ADD ./addons /mnt/extra-addons
 
 # Install dependencies
 RUN pip install --no-cache-dir -r /mnt/extra-addons/music_manager/requirements.txt
